--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,13 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
     <pgloaguen.com.library.VideoTrimView
+        android:id="@+id/fillvideotrim"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"/>
+
+    <pgloaguen.com.library.VideoTrimView
         android:id="@+id/videotrim"
+        android:layout_below="@id/fillvideotrim"
         android:layout_width="match_parent"
         android:layout_height="72dp"/>
 
